# telescope

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.run/: Run Plugin.run.xml
clip/: build.gradle.kts
clip/src/main/cpp/: CMakeLists.txt  clip_android.cpp
clip/src/main/java/android/clip/cpp/: CLIPAndroid.java  NativeLoader.java
clip/src/main/resources/: libclip-android.dylib
objectbox-models/: default.json  default.json.bak
src/main/java/android/clip/cpp/: CLIPAndroid.java
src/main/kotlin/com/puntogris/telescope/: PluginInitializer.kt  ToolWindow.kt
src/main/kotlin/com/puntogris/telescope/application/: Clip.kt  (+7 more)
website/: bun.lockb  package.json  requirements.txt  tailwind.config.ts
website/api/: encode.py
website/src/: app.css
website/src/lib/: data.ts  dotsVertical.svelte  embeddings.json  folderIcon.svelte  lineIcon.svelte  pullRequestIcon.svelte  samples.json  samples.ts  utils.ts
website/src/lib/icons/: chevronDownIcon.svelte  chevronUpIcon.svelte  classKotlinIcon.svelte  commitIcon.svelte  dotsIcon.svelte  dotsVertical.svelte  folderIcon.svelte  lineIcon.svelte  markdownIcon.svelte  pullRequestIcon.svelte  shapesIcon.svelte  syncIcon.svelte  telescopeIcon.svelte  terminalIcon.svelte  xIcon.svelte
website/src/lib/samples/: arrowLeftSample.svelte  arrowRightSample.svelte  clockSample.svelte  cloudSample.svelte  homeSample.svelte  settingsSample.svelte  sunSample.svelte  syncSample.svelte
website/src/routes/: +layout.svelte  +page.svelte  terminal.svelte
website/src/routes/api/: +server.ts
(+88 files in other folders)
